-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.4, 4.8.5, 5.2.0, 5.3.2
-
None
-
d55407822eefbc05f7d8bb44c53b057332b5b399 qt4: 3f2f403191ea5a38c66b79840e3a33e05827d580
The startup-time for Assistant, when it is started via remote control (you can test this with the RemoteControl example) is always really long because it has to update the search index every time the process starts. This can take more than 30 seconds, and during that time, assistant might even lock up if it is sent the wrong message at the wrong time, but other times, it just takes a really long time to become responsive.
It shouldn't need to reindex the help on each startup.
- is duplicated by
-
QTBUG-44533 assistant startup takes several minutes with -enableremotecontrol
-
- Closed
-
- relates to
-
QTBUG-18829 Assistant crashes when remote controlled and gets syncContents
-
- Closed
-
-
QTBUG-21046 Using Qt Assistant Remotely don't show the page that I want it to show when use "activateKeyword" command
-
- Closed
-
| For Gerrit Dashboard: QTBUG-36850 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 95279,2 | Assistant: Fix index updating on startup in the remote control mode | 5.4 | qt/qttools | Status: MERGED | +2 | 0 |
| 109429,2 | Assistant: Fix index updating on startup in the remote control mode | 4.8 | qt/qt | Status: MERGED | +2 | 0 |