Assistant: Fix index updating on startup in the remote control mode

HelpEngineWrapper::initialDocSetupDone() should be called only once
right after the initialization of the help models. Calling it on
every small update leads to recursion.

Task-number: QTBUG-36850
(cherry picked from qttools/d55407822eefbc05f7d8bb44c53b057332b5b399)
Change-Id: I3e0390e592069a417d88fbc202a1e45cd91cc139
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>

(cherry picked from commit 3f2f403191ea5a38c66b79840e3a33e05827d580)